--- a/requirements.txt
+++ b/requirements.txt
@@ -1,64 +1,5 @@
-argcomplete==1.12.3
-argon2-cffi==21.1.0
-attrs==21.2.0
-autopep8==1.5.7
-backcall==0.2.0
-bleach==4.1.0
-cffi==1.14.6
-colorama==0.4.4
-comtypes==1.1.10
-debugpy==1.4.3
-decorator==5.1.0
-defusedxml==0.7.1
 Django==2.0.7
-entrypoints==0.3
 gunicorn==20.1.0
-importlib-metadata==4.8.1
-ipykernel==6.4.1
-ipython==7.28.0
-ipython-genutils==0.2.0
-jedi==0.18.0
-Jinja2==3.0.1
-jsonschema==4.0.1
-jupyter-client==7.0.5
-jupyter-core==4.8.1
-jupyterlab-pygments==0.1.2
-MarkupSafe==2.0.1
-matplotlib-inline==0.1.3
-mistune==0.8.4
-nbclient==0.5.4
-nbconvert==6.2.0
-nbformat==5.1.3
-nest-asyncio==1.5.1
-notebook==6.4.4
-notepad==1.2.6
-packaging==21.0
-pandocfilters==1.5.0
-parso==0.8.2
-pickleshare==0.7.5
 Pillow==8.3.2
-prometheus-client==0.11.0
-prompt-toolkit==3.0.20
-pycodestyle==2.7.0
-pycparser==2.20
-Pygments==2.10.0
-pyparsing==2.4.7
-pypiwin32==223
-pyrsistent==0.18.0
-python-dateutil==2.8.2
-pyttsx3==2.90
 pytz==2021.3
-pywin32==301
-pywinpty==1.1.4
-pyzmq==22.3.0
-Send2Trash==1.8.0
-six==1.16.0
-terminado==0.12.1
-testpath==0.5.0
-toml==0.10.2
-tornado==6.1
-traitlets==5.1.0
-typing-extensions==3.10.0.2
-wcwidth==0.2.5
-webencodings==0.5.1
-zipp==3.6.0
+whitenoise==5.3.0
