--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Django==2.0.7
-gunicorn==20.1.0
-Pillow==8.3.2
-pytz==2021.3
-whitenoise==5.3.0
+Django
+gunicorn
+Pillow
+pytz
+whitenoise
+sqlite
+sqlparse
